--- a/src/web/index.html
+++ b/src/web/index.html
@@ -1,3 +1,22 @@
+<html>
+<head>
+<title>VideosToStream</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+video {
+	width: 100%;
+	height: 100%;
+	object-fit: contain; /* Maintains aspect ratio while covering the container */
+	object-position: center; /* Horizontally centers the video and aligns to the top */
+}
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #000;
+	}
+}
+</style>
+</head>
+<body style="margin: 0;">
 <video id="video" controls></video>
 <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 <script>
@@ -6,3 +25,4 @@
   hls.loadSource('/playlist.m3u8');
   hls.attachMedia(video);
 </script>
+</body>
